Adding missing option to make created user an admin. Adding .idea project files to gitignore.
